kubernetes/cka/20220226/DaemonSet1.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ds
  labels:
    app: dsnginx
spec:
  selector:
    matchLabels:
      app: dsnginx
  template:
    metadata:
      labels:
        app: dsnginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
            - containerPort: 80
