kubernetes/cka/20220226/clientpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: clientpod
  labels:
    app: myapp
spec:
  containers:
    - name: myapp-container
      image: busybox:1.28
      command: ["sh", "-c", "echo The app is running! && sleep 3600"]
