kubernetes/cka/20220226/exip.yaml
apiVersion: v1
kind: Service
metadata:
  name: exip-service
spec:
  selector:
    app: httpd
  ports:
    - name: http
      protocol: TCP
      port: 8085
      targetPort: 80
  externalIPs:
    - 10.19.5.31
